--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@adonisjs/cache",
   "description": "Official caching module for AdonisJS framework",
-  "version": "0.0.0",
+  "version": "1.0.0-0",
   "engines": {
     "node": ">=18.16.0"
   },
