--- a/package.json
+++ b/package.json
@@ -45,42 +45,42 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^6.1.3-25",
-    "@adonisjs/core": "^6.1.5-29",
+    "@adonisjs/assembler": "^7.0.0-1",
+    "@adonisjs/core": "^6.1.5-38",
     "@adonisjs/eslint-config": "^1.1.8",
-    "@adonisjs/lucid": "19.0.0-3",
-    "@adonisjs/prettier-config": "^1.1.8",
-    "@adonisjs/redis": "8.0.0-12",
-    "@adonisjs/tsconfig": "^1.1.8",
-    "@japa/assert": "2.0.1",
-    "@japa/expect-type": "^2.0.0",
-    "@japa/file-system": "^2.0.1",
-    "@japa/runner": "^3.0.5",
-    "@japa/snapshot": "^2.0.1",
-    "@swc/core": "^1.3.96",
-    "@types/node": "^20.8.10",
-    "better-sqlite3": "^9.0.0",
+    "@adonisjs/lucid": "19.0.0-8",
+    "@adonisjs/prettier-config": "^1.2.1",
+    "@adonisjs/redis": "8.0.0-14",
+    "@adonisjs/tsconfig": "^1.2.1",
+    "@japa/assert": "2.1.0",
+    "@japa/expect-type": "^2.0.1",
+    "@japa/file-system": "^2.1.1",
+    "@japa/runner": "^3.1.1",
+    "@japa/snapshot": "^2.0.4",
+    "@swc/core": "^1.3.101",
+    "@types/node": "^20.10.6",
+    "better-sqlite3": "^9.2.2",
     "c8": "^8.0.1",
     "copyfiles": "^2.4.1",
     "del-cli": "^5.1.0",
-    "eslint": "^8.53.0",
+    "eslint": "^8.56.0",
     "ioredis": "^5.3.2",
-    "luxon": "^3.4.3",
-    "np": "^8.0.4",
+    "luxon": "^3.4.4",
+    "np": "^9.2.0",
     "p-event": "^6.0.0",
-    "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "prettier": "^3.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.2.2"
   },
   "dependencies": {
-    "@poppinss/utils": "^6.5.1",
-    "bentocache": "1.0.0-beta.4"
+    "@poppinss/utils": "^6.7.0",
+    "bentocache": "1.0.0-beta.6"
   },
   "peerDependencies": {
-    "@adonisjs/assembler": "^6.1.3-22",
-    "@adonisjs/core": "^6.1.5-26",
-    "@adonisjs/lucid": "19.0.0-3",
-    "@adonisjs/redis": "8.0.0-12"
+    "@adonisjs/assembler": "^7.0.0-1",
+    "@adonisjs/core": "^6.1.5-38",
+    "@adonisjs/lucid": "19.0.0-8",
+    "@adonisjs/redis": "8.0.0-14"
   },
   "peerDependenciesMeta": {
     "@adonisjs/assembler": {
