--- a/package.json
+++ b/package.json
@@ -8,16 +8,10 @@
   "main": "build/index.js",
   "type": "module",
   "files": [
-    "build/configure.js",
-    "build/configure.d.ts",
-    "build/index.js",
-    "build/index.d.ts",
-    "build/factories",
-    "build/providers",
-    "build/services",
-    "build/commands",
-    "build/src",
-    "build/stubs"
+    "build",
+    "!build/bin",
+    "!build/tests",
+    "!build/test_helpers"
   ],
   "exports": {
     ".": "./build/index.js",
@@ -45,22 +39,22 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^7.0.0-1",
-    "@adonisjs/core": "^6.1.5-38",
-    "@adonisjs/eslint-config": "^1.1.8",
-    "@adonisjs/lucid": "19.0.0-8",
+    "@adonisjs/assembler": "^7.0.0",
+    "@adonisjs/core": "^6.2.0",
+    "@adonisjs/eslint-config": "^1.2.1",
+    "@adonisjs/lucid": "19.0.0",
     "@adonisjs/prettier-config": "^1.2.1",
-    "@adonisjs/redis": "8.0.0-14",
+    "@adonisjs/redis": "8.0.1",
     "@adonisjs/tsconfig": "^1.2.1",
     "@japa/assert": "2.1.0",
     "@japa/expect-type": "^2.0.1",
-    "@japa/file-system": "^2.1.1",
+    "@japa/file-system": "^2.2.0",
     "@japa/runner": "^3.1.1",
     "@japa/snapshot": "^2.0.4",
-    "@swc/core": "^1.3.101",
-    "@types/node": "^20.10.6",
-    "better-sqlite3": "^9.2.2",
-    "c8": "^8.0.1",
+    "@swc/core": "^1.3.105",
+    "@types/node": "^20.11.5",
+    "better-sqlite3": "^9.3.0",
+    "c8": "^9.1.0",
     "copyfiles": "^2.4.1",
     "del-cli": "^5.1.0",
     "eslint": "^8.56.0",
@@ -68,24 +62,21 @@
     "luxon": "^3.4.4",
     "np": "^9.2.0",
     "p-event": "^6.0.0",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.4",
     "ts-node": "^10.9.2",
-    "typescript": "~5.2.2"
+    "typescript": "~5.3.3"
   },
   "dependencies": {
-    "@poppinss/utils": "^6.7.0",
+    "@poppinss/utils": "^6.7.1",
     "bentocache": "1.0.0-beta.6"
   },
   "peerDependencies": {
-    "@adonisjs/assembler": "^7.0.0-1",
-    "@adonisjs/core": "^6.1.5-38",
-    "@adonisjs/lucid": "19.0.0-8",
-    "@adonisjs/redis": "8.0.0-14"
+    "@adonisjs/assembler": "^7.0.0",
+    "@adonisjs/core": "^6.2.0",
+    "@adonisjs/lucid": "19.0.0",
+    "@adonisjs/redis": "^8.0.0"
   },
   "peerDependenciesMeta": {
-    "@adonisjs/assembler": {
-      "optional": true
-    },
     "@adonisjs/redis": {
       "optional": true
     },
