--- a/package.json
+++ b/package.json
@@ -39,40 +39,40 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^7.2.3",
-    "@adonisjs/core": "^6.3.1",
+    "@adonisjs/assembler": "^7.7.0",
+    "@adonisjs/core": "^6.12.0",
     "@adonisjs/eslint-config": "^1.3.0",
-    "@adonisjs/lucid": "20.5.1",
+    "@adonisjs/lucid": "21.1.0",
     "@adonisjs/prettier-config": "^1.3.0",
     "@adonisjs/redis": "8.0.1",
     "@adonisjs/tsconfig": "^1.3.0",
-    "@japa/assert": "2.1.0",
-    "@japa/expect-type": "^2.0.1",
-    "@japa/file-system": "^2.2.0",
-    "@japa/runner": "^3.1.1",
-    "@japa/snapshot": "^2.0.4",
-    "@swc/core": "^1.4.11",
-    "@types/node": "^20.11.30",
-    "better-sqlite3": "^9.4.3",
-    "c8": "^9.1.0",
+    "@japa/assert": "3.0.0",
+    "@japa/expect-type": "^2.0.2",
+    "@japa/file-system": "^2.3.0",
+    "@japa/runner": "^3.1.4",
+    "@japa/snapshot": "^2.0.5",
+    "@swc/core": "^1.6.3",
+    "@types/node": "^20.14.5",
+    "better-sqlite3": "^11.0.0",
+    "c8": "^10.1.2",
     "copyfiles": "^2.4.1",
     "del-cli": "^5.1.0",
     "eslint": "^8.57.0",
-    "ioredis": "^5.3.2",
+    "ioredis": "^5.4.1",
     "luxon": "^3.4.4",
-    "np": "^10.0.2",
+    "np": "^10.0.6",
     "p-event": "^6.0.1",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "ts-node": "^10.9.2",
-    "typescript": "~5.4.3"
+    "typescript": "~5.4.5"
   },
   "dependencies": {
-    "bentocache": "1.0.0-beta.7"
+    "bentocache": "1.0.0-beta.9"
   },
   "peerDependencies": {
     "@adonisjs/assembler": "^7.0.0",
     "@adonisjs/core": "^6.2.0",
-    "@adonisjs/lucid": "^20.0.0",
+    "@adonisjs/lucid": "^20.0.0 || ^21.0.0",
     "@adonisjs/redis": "^8.0.0"
   },
   "peerDependenciesMeta": {
