--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
 node_modules
-build
 coverage
-.todo.md
+.DS_STORE
+.nyc_output
+.idea
+.vscode/
+*.sublime-project
+*.sublime-workspace
+*.log
+build
+dist
+yarn.lock
+shrinkwrap.yaml
+package-lock.json
+test/__app
