--- a/package.json
+++ b/package.json
@@ -40,19 +40,19 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.7.0",
-    "@adonisjs/core": "^6.12.0",
+    "@adonisjs/core": "^6.12.1",
     "@adonisjs/eslint-config": "^1.3.0",
     "@adonisjs/lucid": "21.1.0",
     "@adonisjs/prettier-config": "^1.3.0",
-    "@adonisjs/redis": "8.0.1",
+    "@adonisjs/redis": "9.1.0",
     "@adonisjs/tsconfig": "^1.3.0",
     "@japa/assert": "3.0.0",
     "@japa/expect-type": "^2.0.2",
     "@japa/file-system": "^2.3.0",
     "@japa/runner": "^3.1.4",
     "@japa/snapshot": "^2.0.5",
-    "@swc/core": "^1.6.3",
-    "@types/node": "^20.14.5",
+    "@swc/core": "^1.6.5",
+    "@types/node": "^20.14.8",
     "better-sqlite3": "^11.0.0",
     "c8": "^10.1.2",
     "copyfiles": "^2.4.1",
@@ -62,9 +62,9 @@
     "luxon": "^3.4.4",
     "p-event": "^6.0.1",
     "prettier": "^3.3.2",
-    "release-it": "^17.3.0",
+    "release-it": "^17.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "~5.4.5"
+    "typescript": "~5.5.2"
   },
   "dependencies": {
     "bentocache": "1.0.0-beta.9"
@@ -73,7 +73,7 @@
     "@adonisjs/assembler": "^7.0.0",
     "@adonisjs/core": "^6.2.0",
     "@adonisjs/lucid": "^20.0.0 || ^21.0.0",
-    "@adonisjs/redis": "^8.0.0"
+    "@adonisjs/redis": "^8.0.0 || ^9.0.0"
   },
   "peerDependenciesMeta": {
     "@adonisjs/redis": {
