--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "copy:templates": "copyfiles \"stubs/**/*.stub\" build",
     "typecheck": "tsc --noEmit",
     "index:commands": "adonis-kit index build/commands",
-    "lint": "eslint . --ext=.ts",
+    "lint": "eslint",
     "format": "prettier --write .",
-    "quick:test": "node --enable-source-maps --loader=ts-node/esm bin/test.ts",
+    "quick:test": "node --import=ts-node-maintained/register/esm bin/test.ts",
     "pretest": "npm run lint",
     "test": "c8 npm run quick:test",
     "prebuild": "npm run lint && npm run clean",
@@ -41,8 +41,8 @@
   "devDependencies": {
     "@adonisjs/assembler": "^7.8.2",
     "@adonisjs/core": "^6.14.0",
-    "@adonisjs/eslint-config": "^1.3.0",
-    "@adonisjs/lucid": "21.1.1",
+    "@adonisjs/eslint-config": "^2.0.0-beta.7",
+    "@adonisjs/lucid": "21.2.0",
     "@adonisjs/prettier-config": "^1.4.0",
     "@adonisjs/redis": "9.1.0",
     "@adonisjs/tsconfig": "^1.4.0",
@@ -52,18 +52,18 @@
     "@japa/runner": "^3.1.4",
     "@japa/snapshot": "^2.0.6",
     "@swc/core": "^1.7.26",
-    "@types/node": "^20.16.10",
+    "@types/node": "^22.7.4",
     "better-sqlite3": "^11.3.0",
     "c8": "^10.1.2",
     "copyfiles": "^2.4.1",
     "del-cli": "^5.1.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.11.1",
     "ioredis": "^5.4.1",
     "luxon": "^3.5.0",
     "p-event": "^6.0.1",
     "prettier": "^3.3.3",
     "release-it": "^17.6.0",
-    "ts-node": "^10.9.2",
+    "ts-node-maintained": "^10.9.4",
     "typescript": "~5.6.2"
   },
   "dependencies": {
@@ -91,14 +91,7 @@
     "caching",
     "bentocache"
   ],
-  "eslintConfig": {
-    "extends": "@adonisjs/eslint-config/package"
-  },
   "prettier": "@adonisjs/prettier-config",
-  "publishConfig": {
-    "access": "public",
-    "tag": "latest"
-  },
   "release-it": {
     "git": {
       "commitMessage": "chore(release): ${version}",
