--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "c8": "^10.1.2",
     "copyfiles": "^2.4.1",
     "del-cli": "^5.1.0",
+    "edge.js": "^6.2.0",
     "eslint": "^9.11.1",
     "ioredis": "^5.4.1",
     "luxon": "^3.5.0",
