--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "edge.js": "^6.2.0",
     "eslint": "^9.11.1",
     "ioredis": "^5.4.1",
+    "knex": "^3.1.0",
     "luxon": "^3.5.0",
     "p-event": "^6.0.1",
     "prettier": "^3.3.3",
