--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "files": [
     "build",
     "!build/bin",
-    "!build/tests",
-    "!build/test_helpers"
+    "!build/tests"
   ],
   "exports": {
     ".": "./build/index.js",
@@ -32,7 +31,7 @@
     "pretest": "npm run lint",
     "test": "c8 npm run quick:test",
     "prebuild": "npm run lint && npm run clean",
-    "build": "tsc",
+    "build": "tsup-node --metafile && tsc --emitDeclarationOnly --declaration",
     "postbuild": "npm run copy:templates && npm run index:commands",
     "release": "npx release-it",
     "version": "npm run build",
@@ -67,10 +66,11 @@
     "prettier": "^3.3.3",
     "release-it": "^17.6.0",
     "ts-node-maintained": "^10.9.4",
+    "tsup": "^8.3.0",
     "typescript": "~5.6.2"
   },
   "dependencies": {
-    "bentocache": "1.0.0-beta.9"
+    "bentocache": "1.0.0-beta.11"
   },
   "peerDependencies": {
     "@adonisjs/assembler": "^7.0.0",
@@ -127,5 +127,19 @@
     "exclude": [
       "tests/**"
     ]
+  },
+  "tsup": {
+    "entry": [
+      "index.ts",
+      "src/types.ts",
+      "providers/cache_provider.ts",
+      "services/main.ts"
+    ],
+    "outDir": "./build",
+    "clean": true,
+    "format": "esm",
+    "dts": false,
+    "sourcemap": true,
+    "target": "esnext"
   }
 }
